--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
     }
     .footer{
         background-color: darkblue;
-        color: white;
+        color: black;
         padding: 5%;
         text-align: center;
        
