--- a/css/style.css
+++ b/css/style.css
@@ -7,16 +7,40 @@
 @media (min-width:300px){
     body {
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        padding: 3%;
+    }
+
+    section{
+        padding-top: 5%;
+        padding-bottom: 5%;
+
     }
 
     .contact [type="text"], [type="email"], textarea{  
-        width: 95%;
+        width: 90%;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         padding: 3%;
 
     }
+    
+    .contact [class="d-flex"]{
+        /* 兩個按鈕都有class（的attribute)="d-flex(的value)" */
+        justify-content: space-evenly;
+    }
+
+    .btn{
+        color: white;
+        background-color: darkblue;
+        font-weight: 600;
+    }
+
+    .btn :hover{
+        background-color: steelblue;
+    }
+
     .footer{
         background-color: darkblue;
-        color: black;
+        color:white;
         padding: 5%;
         text-align: center;
        
