--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,58 @@
 
     }
 
+    section > h2{
+        width: 90%;
+        color: steelblue;
+        font-size: 36px;
+        border-bottom: 3px solid steelblue;
+
+    }
+    
+    .education{
+        display: flex;
+        flex-direction: column;
+        row-gap: 5vh;
+        /* row-gap是製造東西間隔的方式 */
+
+    }
+
+    .education aside{
+        width: 40vh;
+        height: 25vh;
+    }
+    #tamwood-card > aside{
+        background: url("/img/tamwood.png");
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+
+    #chula-card > aside{
+        background: url("/img/chula.png");
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+
+    #seoul-card > aside{
+        background: url("/img/soul.png");
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+
+    #unam-card > aside{
+        background: url("/img/unam.png");
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+
+    .card {
+        align-items: center;
+    }
+
     .contact [type="text"], [type="email"], textarea{  
         width: 90%;
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
