--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,34 @@
         align-items: center;
     }
 
+    .skills div{
+        display: flex;
+    }
+
+    .skills aside{
+        width: 600px;
+        height: 190px;
+    }
+
+    #html > aside{
+        background: url(/img/html.png);
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+    #css > aside{
+        background: url(/img/css.png);
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+    #javascript > aside{
+        background: url(/img/javascript.png);
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+
     .contact [type="text"], [type="email"], textarea{  
         width: 90%;
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
