--- a/css/style.css
+++ b/css/style.css
@@ -17,11 +17,11 @@
     }
 
     section > h2{
+        text-transform: uppercase;
         width: 90%;
         color: steelblue;
         font-size: 36px;
         border-bottom: 3px solid steelblue;
-
     }
     
     .education{
@@ -95,6 +95,64 @@
         background-position: center;
         background-repeat: no-repeat;
     }
+
+    #projectone p{
+        line-height: 2;
+    }
+
+    #projectone > div > aside{
+        color: white;
+        margin-right: 3%;
+        margin-bottom: 0.5%;
+        float: left;
+        width: 15vh;
+        height: 15vh;
+        font-weight: 600;
+        background-color: gray;
+
+        display: flex;
+        text-align: center;
+
+    }
+
+    #projecttwo p{
+        line-height: 2;
+    }
+
+    #projecttwo > div > aside{
+        color: white;
+        margin-right: 3%;
+        margin-bottom: 0.5%;
+        float: left;
+        width: 15vh;
+        height: 15vh;
+        font-weight: 600;
+        background-color: gray;
+
+        display: flex;
+        text-align: center;
+
+    }
+
+    #projectthree p{
+        line-height: 2;
+    }
+
+    #projectthree > div > aside{
+        color: white;
+        margin-right: 3%;
+        margin-bottom: 0.5%;
+        float: left;
+        width: 15vh;
+        height: 15vh;
+        font-weight: 600;
+        background-color: gray;
+
+        display: flex;
+        text-align: center;
+
+    }
+
 
     .contact [type="text"], [type="email"], textarea{  
         width: 90%;
