--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,23 @@
         font-size: 36px;
         border-bottom: 3px solid steelblue;
     }
+
+    .work-experience{
+        flex-direction: column;
+        row-gap: 5px;
+    }
+
+    .work-experience h3 {
+        font-weight: 600;
+        color: darkslategrey;
+    }
+
+    .work-experience > article{
+        padding: 2%;
+        border: 2px solid lightgray;
+        border-radius: 10px;
+    }
+
     
     .education{
         display: flex;
