--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@
 }
 
 @media (min-width:300px){
+
+
     body {
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         padding: 3%;
@@ -23,7 +25,9 @@
         font-size: 36px;
         border-bottom: 3px solid steelblue;
     }
-
+    .about > P {
+        padding: 3%;
+    }
     .work-experience{
         flex-direction: column;
         row-gap: 5px;
