--- a/css/style.css
+++ b/css/style.css
@@ -209,6 +209,31 @@
     }
 }
 
+@media (min-width: 700px){
+
+    .contact{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .contact > form{
+        width: 80%;
+    }
+
+    .contact > form > div{
+       padding: 1%;
+    }
+    
+    .contact label{
+        width: 30%;
+    }
+
+    .contact [type="text"], [type="email"]{
+        padding: 1%;
+        width: 60%;
+    }
+}
+
 /* 1- plan teh sections from your page
 1. footer
 2. contact
