--- a/css/style.css
+++ b/css/style.css
@@ -211,7 +211,24 @@
 
 @media (min-width: 700px){
 
+    .education{
+        justify-content: space-evenly;
+        /* 讓四張卡分開. column-gap: ; 也可以 */
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+
+
+    .education aside{
+        padding: 0%;
+        width: 100%;
+    }
+    .education > .card {
+        width: 40%;
+    }
+
     .contact{
+        display: flex;
         flex-direction: column;
         align-items: center;
     }
@@ -232,6 +249,8 @@
         padding: 1%;
         width: 60%;
     }
+
+
 }
 
 /* 1- plan teh sections from your page
