--- a/css/style.css
+++ b/css/style.css
@@ -211,14 +211,23 @@
 
 @media (min-width: 700px){
 
+    #javascript > p{
+        display: flex;
+        align-items: center;
+
+    }
+
+    .skills p{
+        font-size: 24px;
+    }
+
+
     .education{
         justify-content: space-evenly;
         /* 讓四張卡分開. column-gap: ; 也可以 */
         flex-direction: row;
         flex-wrap: wrap;
     }
-
-
     .education aside{
         padding: 0%;
         width: 100%;
@@ -227,24 +236,21 @@
         width: 40%;
     }
 
+
     .contact{
         display: flex;
         flex-direction: column;
         align-items: center;
     }
-
     .contact > form{
         width: 80%;
     }
-
     .contact > form > div{
        padding: 1%;
     }
-    
     .contact label{
         width: 30%;
     }
-
     .contact [type="text"], [type="email"]{
         padding: 1%;
         width: 60%;
