--- a/css/style.css
+++ b/css/style.css
@@ -211,6 +211,12 @@
 
 @media (min-width: 700px){
 
+    .about > p{
+        line-height: 1.5px;
+        font-size: 24px;
+        padding-bottom: 0%;
+    }
+
     #javascript > p{
         display: flex;
         align-items: center;
