--- a/css/style.css
+++ b/css/style.css
@@ -211,8 +211,9 @@
 
 @media (min-width: 700px){
 
+
+
     .about > p{
-        line-height: 1.5px;
         font-size: 24px;
         padding-bottom: 0%;
     }
@@ -265,6 +266,56 @@
 
 }
 
+@media (min-width: 1000px) {
+
+    [data-bs-ride="carousel"] img{
+        width: 100%;
+        height: 30vh;
+        position: center;
+        size: cover;
+    }
+
+    .about, .projects, .skills{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .about > p{
+        width: 90%;
+        padding-top: 0%;
+    }
+
+    .work-experience {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+
+        
+    }
+
+    .work-experience article {
+        width: 30%;
+        font-size: 20px;
+    }
+
+    
+
+    #skills > div > aside{
+        width: 5vh;
+
+    }
+
+    .education .card{
+        width: 20%;
+    }
+
+    .footer{
+        padding: 3%;
+    }
+    
+}
 /* 1- plan teh sections from your page
 1. footer
 2. contact
