--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@
     padding: 0;
 }
 
+
+
 @media (min-width:300px){
 
 
@@ -267,6 +269,30 @@
 }
 
 @media (min-width: 1000px) {
+
+    .navigation-menu{
+        display: block;
+        width: 94%;
+        position: fixed;
+        height: 15vh;
+        z-index: 1;
+    }
+    .navigation-menu > ul{
+
+        justify-content:space-evenly ;
+        list-style-type: none;
+    }
+
+    .navigation-menu li{
+        width: 100%;
+        display: flex;
+    }
+
+    .navigation-menu a{
+        width: 100%;
+        padding: 5%;
+        text-align: center;
+    }
 
     [data-bs-ride="carousel"] img{
         width: 100%;
